fixed services widgets alignment

--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -2099,6 +2099,7 @@ select:focus {
 }
 
 .well-main-services .well-services {
+    height: -webkit-fill-available;
     margin-top: 30px;
 }
 
